--- a/index.html
+++ b/index.html
@@ -355,6 +355,8 @@
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
+    <!-- API Config (must load before form scripts) -->
+    <script src="js/api-config.js"></script>
     <!-- Quote Form -->
     <script src="mail/quote.js"></script>
 
