--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
                     <i class="fa fa-2x fa-map-marker-alt text-primary"></i>
                     <div class="ml-3">
                         <h5 class="text-white">Our Office</h5>
-                        <p class="m-0">123 Street, New York, USA</p>
+                        <p class="m-0">Boston, MA</p>
                     </div>
                 </div>
             </div>
@@ -194,9 +194,8 @@
             <div class="col-lg-4 col-md-6 mb-5 text-center">
                 <h4 class="font-weight-semi-bold text-primary mb-4">Quick Links</h4>
                 <div class="d-flex flex-column align-items-center">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>FAQs</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy</a>
+                    <a class="text-white mb-2" href="terms.html"><i class="fa fa-angle-right mr-2"></i>Terms of Service</a>
+                    <a class="text-white mb-2" href="privacy.html"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
                 </div>
             </div>
             
