add privacy and terms commit

--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>JUSTICE - Free Lawyer Website Template</title>
+    <title>Swap Remodeling</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Swap Remodeling, Home Improvement, Remodeling, Maintenance, Electrical, Plumbing" name="keywords">
+    <meta content="Swap Remodeling is a home improvement company that provides a wide range of services to the community." name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
